--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
     --color-other: #ffbd69;
 
     --color-grey: #292931;
-    --color-grey-700: #31313B;
+    --color-grey-700: #31313b;
     --color-grey-500: #565666;
-    --color-grey-300: #76768B;
-    --color-grey-200: #D2D2E5;
-    --color-grey-100: #F1F1F7;
+    --color-grey-300: #76768b;
+    --color-grey-200: #d2d2e5;
+    --color-grey-100: #f1f1f7;
 
     --font-family: "Poppins", sans-serif;
     --font-size: 1.6rem;
 
-    --border-radius: .4rem;
+    --border-radius: 0.4rem;
 }
 
 html {
@@ -55,29 +55,30 @@ h1 {
 .task {
     --checkbox-width: 2.6rem;
     --checkbox-height: 2.6rem;
-    --task-shadow: .2rem .4rem 1.6rem rgba(0,0,0,.2);
+    --task-shadow: 0.2rem 0.4rem 1.6rem rgba(0, 0, 0, 0.2);
 
     display: grid;
     grid-template-columns: var(--checkbox-width) 1fr auto;
-    grid-gap: .8rem;
+    grid-gap: 0.8rem;
     align-items: center;
 
     background-color: white;
     box-shadow: var(--task-shadow);
     border-radius: var(--border-radius);
-    padding: .8rem;
-    margin-bottom: .8rem;
+    padding: 0.8rem;
+    margin-bottom: 0.8rem;
     cursor: grab;
 }
 
 .task:focus-within {
-    --task-shadow: .4rem .6rem 2rem rgba(0,0,0,.3);
+    --task-shadow: 0.4rem 0.6rem 2rem rgba(0, 0, 0, 0.3);
 }
 
 .task__input {
     border: 0;
     font-family: var(--font-family);
     font-size: var(--font-size);
+    width: 100%;
 }
 
 .task__sort {
@@ -110,10 +111,10 @@ h1 {
 .checkbox label:before {
     content: "";
     display: inline-block;
-    
+
     position: absolute;
-    border: .1rem solid var(--color-grey-200);
-    border-radius: 99rem;
+    border: 0.2rem solid var(--color-grey-300);
+    border-radius: 0.3rem;
     width: var(--checkbox-width);
     height: var(--checkbox-height);
 }
@@ -121,14 +122,14 @@ h1 {
 .checkbox label:after {
     content: "";
     display: inline-block;
-    height: .6rem;
+    height: 0.6rem;
     width: 1.4rem;
-    border-left: .2rem solid var(--color-accent);
-    border-bottom: .2rem solid var(--color-accent);
-    
+    border-left: 0.2rem solid var(--color-accent);
+    border-bottom: 0.2rem solid var(--color-accent);
+
     position: absolute;
-    left: .6rem;
-    top: .8rem;
+    left: 0.6rem;
+    top: 0.8rem;
     transform: rotate(-45deg);
 }
 
@@ -142,4 +143,21 @@ h1 {
 
 .checkbox {
     position: relative;
+}
+
+/* Flipped List Styles */
+.list--flipped .task {
+    grid-template-columns: auto 1fr var(--checkbox-width);
+}
+
+.list--flipped .task .task__sort {
+    order: 0;
+}
+
+.list--flipped .task .task__input {
+    order: 1;
+}
+
+.list--flipped .task .checkbox {
+    order: 2;
 }
