--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
     --font-family: "Poppins", sans-serif;
     --font-size: 1.6rem;
+    --font-size-sm: 1.3rem;
 
     --border-radius: 0.4rem;
 }
@@ -44,6 +45,12 @@ li {
 h1 {
     color: var(--color-accent);
     font-size: 1.4em;
+}
+
+/* Header */
+header {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .container {
@@ -160,4 +167,79 @@ h1 {
 
 .list--flipped .task .checkbox {
     order: 2;
+}
+
+/* Toggle Switch */
+.switch {
+    display: inline-flex;
+    align-items: center;
+    font-size: var(--font-size-sm);
+    margin: 5px 0;
+}
+
+.switch .switch__toggle {
+    position: relative;
+    cursor: pointer;
+    margin-right: 0.6rem;
+}
+
+.switch [type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
+/* default states */
+
+.switch .switch__toggle::before,
+.switch .switch__toggle::after {
+    content: "";
+    display: block;
+    margin: 0 3px;
+    transition: all 100ms cubic-bezier(0.4, 0, 0.2, 1);
+    background: #bdbdbd;
+}
+
+.switch .switch__toggle::before {
+    height: 1.3em;
+    width: 3em;
+    border-radius: 0.65em;
+    opacity: 0.6;
+}
+
+.switch .switch__toggle::after {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    height: 1.7em;
+    width: 1.7em;
+    border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2), 0 0 2px rgba(0, 0, 0, 0.4);
+}
+
+/* special states */
+.switch [type="checkbox"]:focus + .switch__toggle {
+    outline: #5d9dd5 solid 1px;
+    box-shadow: 0 0 8px #5e9ed6;
+}
+
+.switch [type="checkbox"]:disabled + .switch__toggle {
+    cursor: not-allowed;
+    filter: grayscale(100%);
+    opacity: 0.6;
+}
+
+.switch [type="checkbox"]:disabled + .switch__toggle::after {
+    box-shadow: none;
+}
+
+/* checked states */
+
+.switch [type="checkbox"]:checked + .switch__toggle::before,
+.switch [type="checkbox"]:checked + .switch__toggle::after {
+    background: var(--color-brand);
+}
+
+.switch [type="checkbox"]:checked + .switch__toggle::after {
+    transform: translate(calc(3em - 100%), -50%);
 }
